Font settings are not applied to characters from the Mathematical Alphanumeric Symbols Unicode block (outside of MathML)
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox81 | --- | fixed |
People
(Reporter: vincent-moz, Assigned: jfkthame)
References
Details
Attachments
(2 files, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:79.0) Gecko/20100101 Firefox/79.0
Steps to reproduce:
- In the font preferences for Mathematics, choose Asana Math.
- Open a web page with characters from the Mathematical Alphanumeric Symbols Unicode block (range U+1D400–U+1D7FF), such as the attached file (math-font.html), which has 2 italic characters 𝑚𝑥.
Actual results:
If font-family is not specified, one gets some default font, but not the one chosen for Mathematics.
Expected results:
The font chosen for Mathematics should be applied on the characters from the Mathematical Alphanumeric Symbols Unicode block.
| Reporter | ||
Comment 1•5 years ago
|
||
Explicitly set the encoding to UTF-8.
| Reporter | ||
Comment 2•5 years ago
|
||
Comment on attachment 9170216 [details]
math-font.html
Corrected the MIME type.
Comment 3•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
| Assignee | ||
Comment 4•5 years ago
|
||
I believe the font pref for Mathematics is used for MathML rendering, but is not (currently, at least) used for font fallback in general HTML content. (It would be used if the HTML element had the attribute lang="x-math", but not otherwise.)
Probably it would make sense to use this setting also (during font fallback) for characters from the Unicode mathematical-symbols blocks, rather than the generic "Other Writing Systems" preference which is what they'd currently try.
| Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Description
•