Bug 1659313 - Use the Mathematics font preference during fallback for characters from Unicode math-symbols blocks. r=fredw

Differential Revision: https://phabricator.services.mozilla.com/D87192